# finetuning

./: .gitignore  README.md  pyproject.toml  test_setup.py
configs/: config.yaml
configs/data_mixture/: balanced.yaml  custom.yaml  institutional_heavy.yaml  single.yaml
configs/experiment/: sweep_lr.yaml
configs/model/: config.yaml  mixtral.yaml  qwen.yaml
configs/preprocessing/: default.yaml
configs/training/: default.yaml
multirun/2025-11-03/19-20-10/: multirun.yaml
multirun/2025-11-03/19-20-10/0/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: mixtral.py  setup.sh  train_hydra.py  validate_config.py
src/: __init__.py
src/trainers/: __init__.py  sft.py
src/utils/: __init__.py  config.py
tests/: test_preprocessing.py
