[project]
name = "finetuning"
version = "0.1.0"
description = "SFT and RL experiments with open-source LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "trl>=0.7.10",
    "bitsandbytes>=0.41.0",
    "deepspeed>=0.12.0",
    "datasets>=2.15.0",
    "tokenizers>=0.15.0",
    "wandb>=0.16.0",
    "tensorboard",
    "scipy",
    "scikit-learn",
    "pandas",
    "tqdm",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
